Manutenção no kernel. Inclusão dos comentários. Inclusão de código para imprimir arquivo de saída no sequencial.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,6 @@ set(SOURCE_FILES
         sequencial/stemmer.cpp
         sequencial/stemmer_inverso.cpp
         paralelo/stemmer_inverso_paralelo.cpp
-        teste_le_arq.cpp paralelo/kernel_stemmer.cu paralelo/myruntime.cu)
+        teste_le_arq.cpp paralelo/kernel_stemmer.cu paralelo/myruntime.cu teste_cmp.cpp)
 
 add_executable(stemmer ${SOURCE_FILES})
